Fixed header background on mobile

--- a/styles/scss/_about.scss
+++ b/styles/scss/_about.scss
@@ -31,16 +31,10 @@
 
         i{
             position: absolute;
+            color:  lighten($secondary-accent, 20%);
+            top: 3rem;
+            font-size: 24rem;
         }
-
-        .fa-headphones{
-            color: $secondary-accent;
-            top: 0.5rem;
-            font-size: 30rem;
-            opacity: 0.2;
-        }
-
-
 
     }
 
@@ -55,7 +49,7 @@
         position: absolute;
         content: "";
         left: 0;
-        top: 6rem;
+        top: 5.5rem;
         border-bottom: 4px solid $primary-accent;
         width: 100px;
         transition: left 0.5s ease-in-out;
