--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -97,7 +97,7 @@ textarea{
 }
 
 input, textarea{
-    box-shadow: 4px 4px 8px $dark;
+    box-shadow: 0 2px 5px $dark;
     border-radius: 3px;
     padding: 20px;
     border: none;
@@ -105,7 +105,7 @@ input, textarea{
 
 input:focus, 
 textarea:focus{
-    box-shadow: 2px 2px 8px $primary-accent;
+    box-shadow: 0 2px 5px $primary-accent;
 }
 
 button{
